vm/snapshots/variables-parameters-no_parameters-NoParametersOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
No parameters test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
No parameters test passed.
----- STDERR -----
