vm/snapshots/variables-parameters-parameter_shadowing-ParameterShadowingOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Parameter shadowing test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Parameter shadowing test passed.
----- STDERR -----
