vm/snapshots/variables-parameters-pass_by_reference-PassByReferenceOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Pass by reference test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Pass by reference test passed.
----- STDERR -----
