vm/snapshots/variables-parameters-primitive_parameters-PrimitiveParametersOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Primitive parameters test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Primitive parameters test passed.
----- STDERR -----
