vm/snapshots/variables-parameters-varargs_parameters-VarargsParametersOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Varargs parameters test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Varargs parameters test passed.
----- STDERR -----
