vm/snapshots/variables-static_fields-cross_class_access-CrossClassAccessOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Cross-class access test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Cross-class access test passed.
----- STDERR -----
